--- a/WebAppCore/WebAppCore.csproj
+++ b/WebAppCore/WebAppCore.csproj
@@ -6,4 +6,8 @@
     <ImplicitUsings>enable</ImplicitUsings>
   </PropertyGroup>
 
+  <ItemGroup>
+    <ProjectReference Include="..\ProductMicroservice\ProductMicroservice.csproj" />
+  </ItemGroup>
+
 </Project>
